
- version: 0.1.25
  date:    wip
  changes:
  - core: Improve error messages
  - core: Fix bugs with auto-declare

- version: 0.1.24
  date:    Sat Dec  9 10:28:21 PM PST 2023
  changes:
  - core: Refactor removing unnecessary let forms
  - release: Improve release process
  - sample: Add more sample YS programs

- version: 0.1.23
  date:    Fri Dec  8 10:13:14 PM EST 2023
  changes:
  - core: Support '10 .. 1'

- version: 0.1.22
  date:    Thu Dec  7 08:48:20 PM EST 2023
  changes:
  - core: YS namespaces now start with `ys.`
  - core: Allow =>(...) form
  - ys: Generate deps.edn for ys directory
  - core: Implement namespace symbols like foo::bar

- version: 0.1.21
  date:    Wed Dec  6 07:35:15 PM PST 2023
  changes:
  - core: Collapse (=> ...) -> ...
  - Start logging project changes in Changes yaml file
  - ys: Disable -R -N -K repl options for now
  - core: Add call to main when only one top level form
  - core: Support def and defn symbols with dashes in them

- version: 0.1.20
  date:    Wed Dec  6 08:39:19 AM PST 2023
  changes:
  - First official release to https://github.com/yaml/yamlscript/releases
  - Working YS to CLJ compiler written in Clojure
  - Builds bin/ys CLI and lib/libyamlscript.so shared libarary
  - Unit test suites for compiler and CLI
  - Make targets for build, test and install