@@ -49,6 +49,8 @@
 (def lnum #"-?\d+")                        ; Integer token
                                            ; Operator token
 (def oper #"(?:[-+*/<=>|&]{1,3}|\.\.|\|\||&&)")
+(def lamb #"(?:\\\()")                     ; Lambda start token
+(def narg #"(?:%\d*)")                     ; Numbered argument token
 (def fops #"(?:=>|->)")
 (def strg #"(?x)
             \#?                            # Possibly a regex
