@@ -4,6 +4,7 @@
   changes:
   - core: Improve error messages
   - core: Fix bugs with auto-declare
+  - core: Add lambda anonymous function support
 
 - version: 0.1.24
   date:    Sat Dec  9 10:28:21 PM PST 2023
